--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
     "@hookform/resolvers": "^3.9.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.11",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -21,11 +24,14 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "^0.0.25",
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.3.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.1",
+    "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-table": "^8.20.5",
+    "@uploadthing/react": "^6.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -38,14 +44,20 @@
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-dom-confetti": "^0.2.0",
+    "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-rnd": "^10.4.13",
     "redux-persist": "^6.0.0",
+    "resend": "^4.0.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "stripe": "^16.8.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.10.0",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
   },
